Prevent scrolling on the body element
- this will hopefully prevent scrollbars from appearing on Windows

--- a/src/main.css
+++ b/src/main.css
@@ -13,10 +13,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
   display: flex;
   min-height: 100vh;
+  overflow: hidden;
 }
